--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
 </head>
 <body>
 		<div class="App">
+			<h1 class="App-Header" style="
+				text-align: center; 
+				margin: 0;
+				font-size: 50px;
+			">Heledron</h1>
 			<div class="App-Main">
 				<helion-card style="padding: .5em;">
-					<h1 style="margin: 0;">Heledron</h1>
-					<p>
-						Welcome! This is my personal website. <br />
-						I post all my projects here, including free tools, packages, and more.
-					</p>
+					Welcome! <br />
+					This is my personal website. I post all my projects here, including free tools, packages, and more.
 				</helion-card>
 
 				<helion-card style="padding: .5em;">
