--- a/src/cv/index.html
+++ b/src/cv/index.html
@@ -65,7 +65,16 @@
 		</p>
 			
 		<p>
-			I continue to add new features to the system and have worked with the company on other simple marketing websites.
+			I continue to add new features to the system and have worked with the company on other projects.
+		</p>
+
+		<h2 class="break-before-page">Marketing / Landing Page</h2>
+		<div style="display: flex; gap: 1rem;">
+			<img src="./images/coconutsugar.png" alt="ERP Desktop" class="shadow-md" style="max-height: 400px; align-self: flex-start;">
+		</div>
+
+		<p>
+			<a href="https://615coconutsugar.com">615coconutsugar.com</a> is a marketing website I developed for a food distribution company in Hong Kong. The original website was built by a web design agency using Wordpress and hosted through an expensive plan. I helped rebuilt the website using SvelteKit, significantly improving responsiveness and load times. I also added multi-lingual support (5 languages), support for mobile devices, and cleaned up the design.
 		</p>
 
 		
@@ -104,20 +113,20 @@
 
 		<h3>Reuleaux Polygon Generator</h3>
 
-		<img class="shadow-md" src="./images/reuleaux-polygon-generator.webp" style="max-width: 400px" alt="Reuleaux Polygon Generator">
+		<img class="shadow-md" src="/tools/reuleaux-polygon-generator/thumbnail.webp" style="max-width: 400px; width: 100%;" alt="Reuleaux Polygon Generator">
 		<p>
 			A tool for generating Reuleaux polygons. This tool was featured in a successful <a href="https://www.kickstarter.com/projects/mathmeetsmachine/make-100-revolution-evolution-3d-reuleaux-polygons-set" target="_blank">Kickstarter campaign</a>. This was the first of its kind to be made publicly available on the web (that I could find), and is currently still the only one that supports an "extension" parameter.
 		</p>
 
 		<h3>Sorting Algorithm Visualizer</h3>
 
-		<img class="shadow-md" src="./images/sorting-algorithm-visualizer.webp" style="max-width: 350px" alt="Sorting Algorithm Visualizer" />
+		<img class="shadow-md" src="/misc/sorting-algorithm-visualizer/thumbnail.webp" style="max-width: 400px; width: 100%;" alt="Sorting Algorithm Visualizer" />
 		<p>
 			A tool for visualizing 11+ sorting algorithms. Although other tools for this already exist, I wanted to build one that would work on the web and visualize auxiliary memory.
 		</p>
 		
 		<h3 class="break-before-page">Ascii 3D</h3>
-		<img class="shadow-md" src="./images/ascii-3d.webp" style="max-width: 350px" alt="Ascii 3D" />
+		<img class="shadow-md" src="/misc/ascii3d/demos/water/thumbnail.webp" style="max-width: 400px; width: 100%;" alt="Ascii 3D" />
 		<p>
 			A 3D rendering pipeline that outputs ASCII characters instead of pixels. This was featured on <a href="https://www.youtube.com/watch?v=ARQh52GHNtk&t=1710s" target="_blank">BxJS Weekly</a>, a popular JavaScript podcast. This project taught me linear algebra and how 3D rendering pipelines work.
 		</p>
@@ -211,9 +220,9 @@
 		</p>
 
 		<h3>Game Engine</h2>
-		<div style="display: flex; gap: 1rem;">
-			<img class="shadow-md" style="display: block; width: auto; height: 300px;" src="./images/2d-shooter.png" alt="Game Engine">
-			<img class="shadow-md nearest-neighbor" style="display: block; width: auto; height: 300px;" src="./images/deep.png" alt="Game Engine">
+		<div style="display: flex; gap: 1rem; flex-wrap: wrap; position: relative; align-items: start;">
+			<img class="shadow-md" style="display: block; max-height: 300px;" src="./images/2d-shooter.png" alt="Game Engine">
+			<img class="shadow-md nearest-neighbor" style="display: block; max-height: 300px;" src="./images/deep.png" alt="Game Engine">
 		</div>
 		<br>
 
