Add #link redirect

--- a/src/index.html
+++ b/src/index.html
@@ -186,10 +186,10 @@
 					<span>Patreon</span>
 				</a>
 				
-				<a class="Card" target="_blank" href="https://www.redbubble.com/people/Heledron/shop?asc=u">
+				<!--<a class="Card" target="_blank" href="https://www.redbubble.com/people/Heledron/shop?asc=u">
 					<span style="font-size: 200%; line-height: 100%;">RB</span>
 					<span>Redbubble</span>
-				</a>
+				</a>-->
 			</nav>
 		</aside>
 	</div>
