--- a/src/404.html
+++ b/src/404.html
@@ -5,26 +5,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<!-- info -->
-	<title>Heledron - 403</title>
+	<title>Heledron - 404</title>
 	<meta name="author" content="Morgan"/>
-	<meta name="description" content="Heledron - 403"/>
+	<meta name="description" content="Heledron - 404"/>
 	<meta name="keywords" content="Heledron, Hadron, Cymaera"/>
 	<link rel="canonical" href="https://heledron.com/"/>
 	<meta property="og:image" content="https://heledron.com/thumbnail.webp"/>
 	<link rel="icon" href="/favicon.png" type="image/png"/>
 
 	<!-- scripts -->
-	<script type="module" src="main.ts"></script>
+	<script type="module" src="/error-pages/main.ts"></script>
 </head>
 <body class="center">
 	<div>
-		Access Forbidden
+		Not Found
 	</div>
 
 	<div id="boxContainer">
 		<div class="center">4</div>
 		<div class="center">0</div>
-		<div class="center">3</div>
+		<div class="center">4</div>
 	</div>
 	
 	<div>
