--- a/src/index.html
+++ b/src/index.html
@@ -196,10 +196,10 @@
 					<span>Email</span>
 				</a>
 				
-				<a class="Card" target="_blank" href="https://www.patreon.com/cymaera">
+				<!--<a class="Card" target="_blank" href="https://www.patreon.com/cymaera">
 					<i class="fa5_brands_patreon"></i>
 					<span>Patreon</span>
-				</a>
+				</a>-->
 				
 				<!--<a class="Card" target="_blank" href="https://www.redbubble.com/people/Heledron/shop?asc=u">
 					<span style="font-size: 200%; line-height: 100%;">RB</span>
