--- a/src/cv/index.html
+++ b/src/cv/index.html
@@ -19,7 +19,7 @@
 	<div class="column">
 		<h1>Welcome!</h1>
 		<p>
-			I am Morgan. I am an independent programmer. I have worked on a variety of front-end, back-end, and game development projects. Contact me at <a class="Card" target="_top" href="mailto:heledron@gmail.com">heledron@gmail.com</a>.
+			I am Morgan. I am an independent programmer. I have worked on a variety of front-end, back-end, and game development projects. Contact me at <a class="Card" target="_top" href="mailto:cymaera@heledron.com">cymaera@heledron.com</a>.
 		</p>
 
 		<h2>ERP System</h2>
