--- a/src/index.html
+++ b/src/index.html
@@ -191,7 +191,7 @@
 					<span>Reddit</span>
 				</a>
 				
-				<a class="Card" target="_top" href="mailto:heledron@gmail.com">
+				<a class="Card" target="_top" href="mailto:cymaera@heledron.com">
 					<i class="fa5_brands_envelope"></i>
 					<span>Email</span>
 				</a>
