--- a/src/cv/index.html
+++ b/src/cv/index.html
@@ -21,7 +21,7 @@
 			Welcome!
 		</h1>
 		<p>
-			I am Morgan. I am an independent programmer. I have worked on a variety of front-end, back-end, and game development projects. Contact me at <a target="_top" href="mailto:cymaera@heledron.com">cymaera@heledron.com</a>.
+			I am Morgan. I am an independent programmer. I have worked on a variety of front-end, back-end, and game development projects. Contact me at <a target="_top" href="mailto:contact@heledron.com">contact@heledron.com</a>.
 		</p>
 
 		<h2>ERP System</h2>
@@ -38,7 +38,7 @@
 
 		<p>
 			Since deploying the tool, salespeople have been able to submit orders without having to call the office.
-			They have instant access to product inventory, sales history, and no longer have to cross reference product codes with a huge paper catalogue.
+			They have instant access to product inventory, sales history, and no longer have to cross-reference product codes with a huge paper catalogue.
 		</p>
 
 		<p>
@@ -72,7 +72,7 @@
 		</div>
 
 		<p>
-			<a href="https://615coconutsugar.com">615coconutsugar.com</a> is a marketing website I developed for a food distribution company in Hong Kong. The original website was built by a web design agency using Wordpress and hosted through an expensive plan. I helped rebuild the website using SvelteKit, significantly improving responsiveness and load times. I also added multi-lingual support (5 languages), support for mobile devices, and cleaned up the design.
+			<a href="https://615coconutsugar.com">615coconutsugar.com</a> is a marketing website I developed for a food distribution company in Hong Kong. The original website was built by a web design agency using WordPress and hosted through an expensive plan. I helped rebuild the website using SvelteKit, significantly improving responsiveness and load times. I also added multilingual support (5 languages), support for mobile devices, and cleaned up the design.
 		</p>
 
 		
@@ -84,7 +84,7 @@
 		<br>
 
 		<p>
-			This is an Outlook add-in I developed for a compliance company in Hong Kong. It includes a template system with rich-text, image, and automatic timezone conversion features.
+			This is an Outlook add-in I developed for a compliance company in Hong Kong. It includes a template system with rich-text, image, and automatic time zone conversion features.
 		</p>
 
 		<p>
@@ -139,7 +139,7 @@
 		<h3>EMCL Compiler</h3>
 
 		<p>
-			A compiler which converts my own programming language (EMCL), into Minecraft function files, a verbose, low-level language with some similarities to assembly. It has accrued a small user base and has been featured on <a href="https://github.com/RanolP/awesome-mcje-vanilla-tech" target="_blank">some lists</a>.
+			A compiler that converts my own programming language (EMCL), into Minecraft function files, a verbose, low-level language with some similarities to assembly. It has accrued a small user base and has been featured on <a href="https://github.com/RanolP/awesome-mcje-vanilla-tech" target="_blank">some lists</a>.
 			
 			The compiler contains a lexical-analyser, syntax-analyser, semantic-analyser, optimizer, and code-generator, all built from scratch without any external libraries or generators.
 			
@@ -181,28 +181,28 @@
 
 		<h3>Minecraft Modding</h3>
 		<p>
-			I also worked on a few Minecraft programming projects with companion YouTube tutorials using Java, Kotlin, GLSL and Minecraft function files.
+			I also worked on a few Minecraft programming projects with companion YouTube tutorials using Java, Kotlin, GLSL, and Minecraft function files.
 		</p>
 		<div class="grid gap-4 grid-cols-2">
-			<a class="Card shadow-md overflow-hidden text-inherit no-underline" href="https://youtu.be/PSnPOYeTW-0" target="_blank">
+			<a class="Card shadow-md overflow-hidden text-inherit! no-underline!" href="https://youtu.be/PSnPOYeTW-0" target="_blank">
 				<img class="w-full block" src="https://img.youtube.com/vi/PSnPOYeTW-0/maxresdefault.jpg" alt="Procedurally Animated Robots in Minecraft">
 				<div class="p-3">
 					Procedurally Animated Robots in Minecraft
 				</div>
 			</a>
-			<a class="Card shadow-md overflow-hidden text-inherit no-underline" href="https://youtu.be/RnLWLQsh9mw" target="_blank">
+			<a class="Card shadow-md overflow-hidden text-inherit! no-underline!" href="https://youtu.be/RnLWLQsh9mw" target="_blank">
 				<img class="w-full block" src="https://img.youtube.com/vi/RnLWLQsh9mw/maxresdefault.jpg" alt="3D Meshes with Text Displays in Minecraft">
 				<div class="p-3">
 					3D Meshes with Text Displays in Minecraft
 				</div>
 			</a>
-			<a class="Card shadow-md overflow-hidden text-inherit no-underline" href="https://youtu.be/dr83cXTESXY" target="_blank">
+			<a class="Card shadow-md overflow-hidden text-inherit! no-underline!" href="https://youtu.be/dr83cXTESXY" target="_blank">
 				<img class="w-full block" src="https://img.youtube.com/vi/dr83cXTESXY/maxresdefault.jpg" alt="3D Renderer in Minecraft">
 				<div class="p-3">
 					A working animated 3D Rendering Pipeline in Minecraft
 				</div>
 			</a>
-			<a class="Card shadow-md overflow-hidden text-inherit no-underline" href="https://youtu.be/aLR4YpTnM6c" target="_blank">
+			<a class="Card shadow-md overflow-hidden text-inherit! no-underline!" href="https://youtu.be/aLR4YpTnM6c" target="_blank">
 				<img class="w-full block" src="https://img.youtube.com/vi/aLR4YpTnM6c/maxresdefault.jpg" alt="Boids in Minecraft">
 				<div class="p-3">
 					6 Dimensional Mandelbrot in Minecraft
