--- a/src/cv/index.html
+++ b/src/cv/index.html
@@ -72,7 +72,7 @@
 		</div>
 
 		<p>
-			<a href="https://615coconutsugar.com">615coconutsugar.com</a> is a marketing website I developed for a food distribution company in Hong Kong. The original website was built by a web design agency using WordPress and hosted through an expensive plan. I helped rebuild the website using SvelteKit, significantly improving responsiveness and load times. I also added multilingual support (5 languages), support for mobile devices, and cleaned up the design.
+			<a href="https://coconutsugar.615.hk/">coconutsugar.615.hk</a> is a marketing website I developed for a food distribution company in Hong Kong. The original website was built by a web design agency using WordPress and hosted through an expensive plan. I helped rebuild the website using SvelteKit, significantly improving responsiveness and load times. I also added multilingual support (5 languages), support for mobile devices, and cleaned up the design.
 		</p>
 
 		
